# spotim8

./: .editorconfig  .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  env.example  pyproject.toml  requirements.txt
.github/workflows/: build_wheelhouse.yml  daily_update.yml  deploy-web.yml  spotify_sync.yml
apps/ios/: README.md
apps/ios/Spotim8/: Info.plist  Spotim8App.swift
apps/ios/Spotim8/Models/: LibraryModels.swift
apps/ios/Spotim8/Services/: AutomationService.swift  LibraryService.swift
apps/ios/Spotim8/Views/: AutomationView.swift  LibraryView.swift  MainView.swift  PlaylistDetailView.swift  SettingsView.swift
data/: catalog_meta.json  playlist_consolidation_recommendations.csv  playlists.parquet
notebooks/: 01_sync_data.ipynb  02_analyze_library.ipynb  03_playlist_analysis.ipynb  04_liked_songs_monthly_playlists.ipynb  05_identify_redundant_playlists.ipynb
scripts/: cron.sh  cron_wrapper.sh  email_notify.py  get_refresh_token.py  get_token.py  run_sync_local.sh  runner.py  setup.py  setup_cron.sh  setup_local.py  spotify_sync.py  sync.py  sync_and_update.py
server/: README.md  server.py  start_server.sh
spotim8/: __init__.py  analysis.py  client.py  genre_inference.py  genres.py
spotim8_app/src/context/: SpotifyContext.tsx
spotim8_app/src/lib/: spotify.ts
src/scripts/automation/: config.py  playlist_update.py  sync.py
